--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
+    "prettier": "./node_modules/.bin/prettier --write src/*.ts src/remember/*.ts test/*.ts",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
